--- a/index.html
+++ b/index.html
@@ -43,7 +43,66 @@
 <!-- body처럼 사용하기 위한 div -->
 <div class="body__container">
 
-    
+    <!-- HEADER -->
+    <header class="section">
+        <div class="inner clearfix">
+
+            <div class="menu-group float--left">
+                <div class="logo">
+                    <a href="#">GitHub</a>
+                </div>
+                <ul class="main-menu">
+                    <li>
+                        <a href="#">Personal</a>
+                    </li>
+                    <li>
+                        <a href="#">Open Source</a>
+                    </li>
+                    <li>
+                        <a href="#">Business</a>
+                    </li>
+                    <li>
+                        <a href="#">Explore</a>
+                    </li>
+                </ul>
+            </div> 
+            <!-- menu-group end --> 
+
+            <div class="sign-group float--right">
+                <div class="btn-group">
+                    <a href="#" class="btn sign-in">Sign in</a>
+                    <a href="#" class="btn btn--primary sign-up">Sign up</a>
+                </div>
+                <form id="search-form" action="" method="post">
+                    <input type="text" id="search" class="input--text" placeholder="Search GitHub">
+                    <input type="submit" value="submit">
+                </form>
+                <ul class="sub-menu">
+                    <li>
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Support</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!-- HEADER END -->
+
+
 </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
